@@ -111,6 +111,7 @@
     * fix empty SQL_DIAG_SERVER_NAME field in DM-supplied diag recs
     * fix differing behaviour for an empty string DSN in SQLConnect/W
     * Alter isql to return errors from SQLMoreResults
+    * Handle case of building on mingw-w64
 
 3rd-Aug-2015
 2.3.4
